update to Java 17
Signed-off-by: Gabriel Valencia <gvalenc@us.ibm.com>